# chio

./: Cargo.toml  README.md  settings.json
src/: cpu.rs  lib.rs  main.rs  peripherals.rs
