[package]
name = "chio"
version = "0.1.0"
authors = ["nacho <sabauflorin28@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = {version = "0.22.2", features = ["serde"] }
winit_input_helper = "0.7.0"
pixels = "0.2.0"
rand = "0.7.3"
serde = { version = "1.0", features = ["derive"]  }
serde_json = "1.0"
